--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	color: #312f2b;
 	line-height:1.1em;
-	font-family:'Open Sans', Arial, sans-serif;
+	font-family:'cursive',lucida handwriting, sans-serif;
 }
 h1 {
 	font-size: 36px;
@@ -289,7 +289,7 @@ h2.pagetitle {
 	font-size: 1.75em;
 	margin-left: 0;
 	font-weight: 400;
-	text-transform:uppercase;
+	text-transform:capitalize;
 }
 .navbar .brand a:hover {
 	text-decoration: none;
