--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ section.spacer {
 	background:#ffe873;
 }
 .spacer.orange,.section.orange {
-	background:#f36f36;
+	background:#02586A;
 }
 
 section.spacer.bg2 {
@@ -755,7 +755,7 @@ section#services .service-box h2 {
 }
 
 section#services.section.orange .service-box:hover {
-	background:#f36518;
+	background:#02586A;
 }
 
 
